# task-manager

./: .gitattributes  .gitignore  Cargo.toml  LICENSE  README.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: rust.yml
instances/: machines.json  stress.bl
src/: main.rs  rw_file.rs  splitter.rs
