[package]
name = "taskmanager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.33"
clap = { version = "4.4.18", features = ["derive"] }
env_logger = "0.11.1"
log = "0.4.20"

[profile.release]
strip = true
