[package]
description = "Management of heavy task processing in parallel with a quenue depending on CPU/RAM load."
edition = "2021"
license = "BSD 3-Clause License"
name = "qrun"
version = "0.1.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.33"
clap = { version = "4.4.18", features = ["derive"] }
env_logger = "0.11.1"
log = "0.4.20"

[profile.release]
strip = true

[package.metadata.deb]
maintainer = "Jxtopher"
copyright = "2023, Jxtopher"
depends = "$auto"
section = "utility"
priority = "optional"
assets = [
    ["target/release/qrun", "usr/bin/", "755"],
]